Fixed position on SearchBtn on mobile

--- a/src/components/SearchContainer/style.css
+++ b/src/components/SearchContainer/style.css
@@ -142,7 +142,7 @@
         align-items: center;
     }
     .searchBtn {
-        left: 158px;
+        left: 131px;
     }
     .distanceType {
         right: 22px;
